--- a/app/src/main/res/layout/custom_notification.xml
+++ b/app/src/main/res/layout/custom_notification.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@android:color/black"
     android:layout_margin="5dp"
+    android:paddingBottom="5dp"
     >
 
 
@@ -26,8 +27,11 @@
         android:id="@+id/image"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
+        android:layout_marginRight="22dp"
+        android:layout_marginEnd="22dp" />
 
     <TextView
         android:id="@+id/text"
